--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <!-- <title>Lovable App</title> -->
+    
     <title>José Luis Flores | Portafolio</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <meta name="description" content="Portafolio profesional de José Luis Flores Carrillo. Ingeniero de Software y Desarrollador Web y Móvil (Flutter/Python). Zacatecas, México." />
+    <meta name="author" content="José Luis Flores Carrillo" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="José Luis Flores | Portafolio" />
+    <meta property="og:description" content="Ingeniero de Software. Mira mis proyectos de desarrollo web, móvil y análisis de datos." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://portafolio-jlfc.web.app/" />
+    <meta property="og:image" content="https://portafolio-jlfc.web.app/perfil.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="José Luis Flores | Portafolio" />
+    <meta name="twitter:description" content="Portafolio profesional de José Luis Flores Carrillo. Ingeniero de Software." />
+    <meta name="twitter:image" content="https://portafolio-jlfc.web.app/perfil.jpg" />
   </head>
 
   <body>
